# sm1le_fitnes_website

./: README.md  alembic.ini  main.py  models.py  muscle_gain_data.json  plans.json  pyproject.toml  requirements.txt  schemas.py
alembic/: env.py
alembic/versions/: 0d4fbe5a6196_add_fitness_fields.py  4de83f712c3e_add_gender_and_purchased_plans.py  64989eae2466_initial_migration.py  f89678e8a00e_add_generated_plans_to_user.py
routers/: ai_service.py  auth.py  auth_api.py  password_reset.py
templates/: course_view.html  index.html  login.html  plan_detail.html  profile.html  questionnaire.html  register.html  reset_password.html  welcome.html
