[tool.poetry]
name = "first_prj"
version = "0.1.0"
description = "FastAPI project"
authors = ["Ivan Ivanov <ivan@example.com>"]

packages = [
    { include = "first_prj" }
]

[tool.poetry.dependencies]
python = "^3.12"
# Основные пакеты (из твоего списка)
fastapi = "0.111.1"
uvicorn = {extras = ["standard"], version = "0.23.2"}
sqlalchemy = "2.0.20"
pydantic = "2.11.7"
pydantic-settings = "2.10.1"
python-dotenv = "1.0.1"
passlib = "1.7.4"
alembic = "1.11.1"
fastapi-mail = "1.5.0"
fastapi-limiter = "0.1.6"
redis = "5.3.1"
stripe = "12.4.0"
itsdangerous = "2.2.0"
python-multipart = "0.0.7"
python-jose = {extras = ["cryptography"], version = "3.5.0"}
bcrypt = "3.2.2"
Pillow = "10.4.0"
psycopg2-binary = "2.9.10"
fpdf2 = "2.7.8"
aiosmtplib = "3.0.2"
google-genai = "^1.73.1" 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"